--- a/app/src/main/res/layout/pdf_adapter.xml
+++ b/app/src/main/res/layout/pdf_adapter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="70dp"
     android:layout_margin="8dp"
     android:clickable="true"
     android:focusable="true"
@@ -13,14 +13,40 @@
 
     <TextView
         android:id="@+id/pdfName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:padding="5dp"
         android:text="@string/app_name"
         android:textColor="#000"
         android:textSize="20sp" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardMenu"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical|end"
+        android:layout_margin="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:selectableItemBackground"
+        app:cardCornerRadius="90dp"
+        app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/imageMenu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/more_vert" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.cardview.widget.CardView>
